--- a/META.yml
+++ b/META.yml
@@ -1,30 +1,30 @@
---- #YAML:1.0
-name:               Net-OAuth-Yahoo
-version:            0.04
-abstract:           Provides simple interface to access Yahoo! APIs
+---
+abstract: 'Provides simple interface to access Yahoo! APIs'
 author:
-    - Satoshi Yagi <satoshi.yagi@yahoo.com>
-license:            perl
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+  - 'Satoshi Yagi <satoshi.yagi@yahoo.com>'
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    Crypt::SSLeay:        0
-    Data::Dumper:         0
-    LWP::Protocol::https:  0
-    LWP::UserAgent:       0
-    Net::OAuth:           0
-    Test::More:           0
-    URI::Escape:          0
-    WWW::Mechanize:       0
-    YAML::Syck:           0
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.57_05
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.120921'
+license: perl
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Net-OAuth-Yahoo
+no_index:
+  directory:
+    - t
+    - inc
+requires:
+  Crypt::SSLeay: 0
+  Data::Dumper: 0
+  LWP::Protocol::https: 0
+  LWP::UserAgent: 0
+  Net::OAuth: 0
+  Test::More: 0
+  URI::Escape: 0
+  WWW::Mechanize: 0
+  YAML::Syck: 0
+version: 0.05
